# bootme

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.husky/: pre-commit
assets/rime/: double_pinyin_flypy_ergodox_ez.custom.yaml
lib/: cli.js  installer.js  scanner.js  utils.js
lib/commands/: autohotkey.js
scripts/: autohotkey.js  cli.js  hello.js  sync-assets.js
src/: colemak.py
src/bootme/: __init__.py  autohotkey.py  cli.py  colemak.py  installer.py  scanner.py  utils.py
src/bootme/assets/: __init__.py
src/bootme/assets/autohotkeys/: TerminalKeyRemapping.ahk  __init__.py  colemak_dh_ansi.ahk  window_switch_app.ahk
src/bootme/assets/rime/: __init__.py  double_pinyin_flypy.custom.yaml
