[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bootme"
version = "0.0.1"
description = "AutoHotkey script installation manager"
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0.0",
    "inquirer>=3.0.0",
    "psutil>=7.2.2",
]

[project.scripts]
bootme = "bootme.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bootme.assets.autohotkeys" = ["*.ahk"]
"bootme.assets.rime" = ["*.yaml"]

[dependency-groups]
dev = [
    "ipython>=8.12.3",
]
